# Self-Evolver

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run_swebench_v2.py
configs/: controller_schema.yaml  easyr1_grpo_example.yaml  easyr1_online_grpo_example.yaml  reward_config.yaml  skill_evolution.yaml  task_evolution.yaml
scripts/: common.sh  download_benchmarks.sh  evaluate.sh  prepare_splits.sh  run_all_experiments.sh  run_full_method.sh  run_mas_static.sh  run_rl_controller.sh  run_skill_evolution.sh  run_task_evolution.sh  run_transfer_eval.sh  run_zero_shot.sh  setup_env.sh
skills/: existing_pattern_alignment.md  failure_localization.md  inspect_before_editing.md  repair_plan_before_patch.md
src/: __init__.py  config.py  main.py
src/benchmark/: __init__.py  base.py  datasets.py  metrics.py  swebench_live.py  swebench_multi.py  swebench_pro.py  swebench_runner.py
src/controller/: __init__.py  injection.py  (+4 more)
tests/: conftest.py  test_benchmark_datasets.py  test_benchmark_live.py  test_benchmark_metrics.py  test_benchmark_multi.py  test_benchmark_pro.py  test_benchmark_runner.py  test_controller_injection.py  test_controller_schema.py  test_critic_judge.py  test_environment_backend.py  test_environment_models.py  test_inspector_tools.py  test_integration_cli.py  test_integration_configs.py  test_integration_contamination.py  test_integration_eval_freeze.py  test_integration_taxonomy.py  test_llm_judge.py  test_memory_hard_case.py  test_orchestrator_loop.py  test_patch_verifier.py  test_reflection_clustering.py  test_reflection_reflector.py  test_reward_utility.py  test_rl_dataset.py  test_rl_online_reward.py  test_scripts_docs.py  test_skills_bank.py  test_skills_evolver.py  test_skills_selector.py  test_skills_taxonomy.py  test_tasks_config.py  test_tasks_families.py  test_tasks_pool.py  test_tasks_variants.py  test_tasks_verification.py  test_workers_guidance.py  test_workers_llm_judge.py  test_workers_patch_generator.py  (+2 more)
(+51 files in other folders)
