[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "self-evolver"
version = "0.1.0"
description = "Self-Evolving Coding Agent Framework - A Multi-Agent System for Code Repair"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Self-Evolver Team"}
]
keywords = ["coding-agent", "multi-agent", "code-repair", "swe-bench"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0",
    "datasets>=2.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "tenacity>=8.0.0",
    # The container test backend and evaluators import swebench at module load;
    # the harness main() is called with the 4.x keyword signature.
    "swebench>=4.0.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
self-evolver = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
# Make `pytest tests -q` work on a fresh clone (and after `pip install -e .`)
# by putting the repo root on sys.path so `import src...` resolves.
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
